--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "symfony/kaz-info-teh-notifier",
     "type": "symfony-bridge",
     "description": "Symfony KazInfoTeh Notifier Bridge",
-    "keywords": ["KazInfoTeh", "notifier", "symfony", "sms"],
+    "keywords": ["kaz-info-teh", "notifier", "symfony", "sms"],
     "homepage": "https://symfony.com",
     "license": "MIT",
     "authors": [
